--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -3,6 +3,7 @@ html, body {
 	width: 100%;
 	display: flex;
 	margin: 0;
+	image-rendering: pixelated;
 }
 
 body {
@@ -17,6 +18,7 @@ body {
 	position: relative;
 	overflow: hidden;
 	color: red;
+	font-size: 0.7rem;
 }
 
 .viewport-background,
@@ -40,7 +42,7 @@ body {
 }
 
 .viewport-background > div {
-	border-bottom: 1px solid black;
-	border-right: 1px solid black;
+	/*border-bottom: 1px solid black;
+	border-right: 1px solid black;*/
 	box-sizing: border-box;
 }
