--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -43,6 +43,7 @@ body {
 }
 
 .viewport-background > div {
+	box-shadow: inset 0 0 4px rgba(255,0,0,0.25);
 	/*border-bottom: 1px solid #CCC;
 	border-right: 1px solid #CCC;
 	box-sizing: border-box;*/
