--- a/docs/app.css
+++ b/docs/app.css
@@ -1,1 +1,413 @@
-.actor{position:absolute;left:calc(1px * calc(var(--x)));top:calc(1px * calc(var(--y)));transform:rotate(calc(1rad * var(--angle)))}.actor .sprite{position:absolute}.actor.facing-left .sprite{transform:scaleX(-1) translateZ(100px)}.actor.knuckles{z-index:1000;width:64px;height:64px;--frameMs:calc(var(--animspeed) * 32ms)}.actor.knuckles .sprite{top:14px;width:64px;height:64px;background-image:url(/Sonic/knux.png);image-rendering:pixelated}.actor[data-mode="2"] .sprite,.actor[data-mode="3"] .sprite{top:15px}.actor.knuckles.walking .sprite{animation:knucklesWalking steps(8) infinite;animation-duration:calc(var(--frameMs) * 16)}@-webkit-keyframes knucklesWalking{from{background-position:-64px 0}to{background-position:-576px 0}}.actor.knuckles.running .sprite{animation:knucklesRunning steps(4) infinite;animation-duration:calc(var(--frameMs) * 8)}@-webkit-keyframes knucklesRunning{from{background-position:0 -64px}to{background-position:-256px -64px}}.actor.knuckles.jumping .sprite{animation:knucklesJumping steps(5) infinite;animation-duration:calc(42ms * 5)}@-webkit-keyframes knucklesJumping{from{background-position:0 -128px}to{background-position:-320px -128px}}.point-actor{background:red;width:1px;height:1px;position:absolute;left:calc(1px * var(--x));top:calc(1px * var(--y));box-shadow:0 0 4px 4px rgba(0,255,0,.45)}.actor.ring{width:64px;height:64px;background:url(/Sonic/rings.png);-webkit-animation:ringSpin steps(7) .4s infinite}@-webkit-keyframes ringSpin{from{background-position:0 0}to{background-position:-448px 0}}.point-dump{display:none;display:inline-block;position:absolute;top:calc(0px + calc(1px * var(--y)));left:calc(0px + calc(1px * var(--x)))}.point-dump .point{mix-blend-mode:difference;z-index:9001;position:absolute;top:0;left:0;background-color:var(--color,#00f);width:2px;height:2px;border-radius:50%}.point-dump .label{z-index:9000;position:absolute;bottom:100%;left:100%;font-weight:700;background-color:rgba(0,0,0,.75);color:#fff;margin-left:3px;margin-bottom:-3px;white-space:nowrap;opacity:.5}.point-dump .label:hover{opacity:1}.line-dump{z-index:2000;position:absolute;top:calc(0px + calc(1px * var(--y)));left:calc(0px + calc(1px * var(--x)))}.line-dump .line{transform:rotate(calc(1rad * var(--angle)));transform-origin:top left;border-left:2px solid red;height:calc(1px * var(--length))}body,html{font-family:verdana;height:100%;width:100%;display:flex;flex-direction:column;margin:0;image-rendering:pixelated}body{justify-content:center;align-items:center}.viewport{width:calc(2px * var(--width));height:calc(2px * var(--height));border:1px solid #000;position:relative;overflow:hidden;color:red;font-size:.7rem}.viewport-caption{width:calc(2px * var(--width))}.viewport-zoom{transform:scale(2);transform-origin:top left}.viewport-background,.viewport-content,.viewport-zoom{position:absolute;top:0;left:0;min-width:100%;min-height:100%}.viewport-content{transform:translate(calc(1px * var(--x)),calc(1px * var(--y)))}.viewport-background{transform:translate(calc(1px * var(--xMod)),calc(1px * var(--yMod)));display:flex;justify-content:center;align-items:center}.viewport-background>div{box-shadow:inset 0 0 4px rgba(255,0,0,.25)}span.arrow-east,span.arrow-west{background-image:url(/debug/arrow-east.svg);background-size:contain;background-repeat:no-repeat;background-position:center;width:1.5em;height:.5em;display:inline-block}span.arrow-west{transform:scaleX(-1)}span.button{background-size:contain;background-repeat:no-repeat;background-position:center;width:1em;height:1em;display:inline-block;margin-left:.25em;margin-right:.25em}span.button.ps-x{background-image:url(/ui/playstation-button-x.svg)}span.button.ps-l1{background-image:url(/ui/playstation-button-l1.svg)}span.button.ps-r1{background-image:url(/ui/playstation-button-r1.svg)}span.button.xb-a{background-image:url(/ui/xbox-button-a.svg)}span.button.xb-b{background-image:url(/ui/xbox-button-b.svg)}span.arrow-west{transform:scaleX(-1)}
+.actor {
+	position:absolute;
+	left: calc(1px * calc(var(--x)));
+	top: calc(1px * calc(var(--y)));
+	transform: rotate( calc( 1rad * var(--angle) ) );
+	/*background-color: rgba(255, 255, 0, 0.75);*/
+}
+
+.actor .sprite {
+	position: absolute;
+}
+
+.actor.facing-left .sprite {
+	transform: scaleX(-1) translateZ(100px);
+}
+
+/*.actor[data-mode="1"] {
+	transform: rotate( calc(90deg  + calc( 1rad * var(--angle) ) ) );
+}
+
+
+.actor[data-mode="2"] {
+	transform: rotate( calc(180deg  + calc( 1rad * var(--angle) ) ) );
+}
+
+
+.actor[data-mode="3"] {
+	transform: rotate( calc(270deg  + calc( 1rad * var(--angle) ) ) );
+}
+*/
+
+.actor.knuckles {
+	z-index: 1000;
+	width:64px;
+	height:64px;
+	--frameMs: calc(var(--animspeed) * 32ms);
+}
+
+.actor.knuckles .sprite {
+	top: 14px;
+	width:64px;
+	height:64px;
+	background-image: url(/Sonic/knux.png);
+	image-rendering: pixelated;
+}
+
+.actor[data-mode="2"] .sprite,
+.actor[data-mode="3"] .sprite {
+	top: 15px;
+}
+
+.actor.knuckles.standing .sprite {
+
+}
+
+.actor.knuckles.walking .sprite {
+	animation: knucklesWalking steps(8) infinite;
+	animation-duration: calc(var(--frameMs) * 16);
+}
+
+@-webkit-keyframes knucklesWalking{
+	from{
+		background-position:-64px 0px;
+	}
+	to{
+		background-position:-576px 0px;
+	}
+}
+
+.actor.knuckles.running .sprite {
+	animation: knucklesRunning steps(4) infinite;
+	animation-duration: calc(var(--frameMs) * 8);
+}
+
+@-webkit-keyframes knucklesRunning{
+	from{
+		background-position:0px -64px;
+	}
+	to{
+		background-position:-256px -64px;
+	}
+}
+
+.actor.knuckles.jumping .sprite {
+	animation: knucklesJumping steps(5) infinite;
+	animation-duration: calc(42ms * 5);
+}
+
+@-webkit-keyframes knucklesJumping{
+	from{
+		background-position:0px -128px;
+	}
+	to{
+		background-position:-320px -128px;
+	}
+}
+
+.point-actor {
+	background: red;
+	width: 1px;
+	height: 1px;
+	position: absolute;
+	left: calc(1px * var(--x));
+	top: calc(1px * var(--y));
+	box-shadow: 0 0 4px 4px rgba(0,255,0,0.45);
+}
+
+/*.point-actor:after {
+	filter: invert(50%) sepia(100) saturate(200) hue-rotate(180deg);
+	display: block;
+	position: absolute;
+	content: ' ';
+	background-image: url(/debug/arrow-east.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+	width: 40px;
+	height: 40px;
+	font-size: 2.5rem;
+	z-index: 1000;
+	color: lime;
+	top: 0;
+	left: 0;
+	transform-origin: -10px 50%;
+	transform: translate(10px, calc(-50%)) rotate(calc(0deg - calc(1rad * var(--angle))));
+}
+
+.point-actor[data-facing="left"]:after {
+	transform: translate(10px, calc(-50%)) rotate(calc(180deg - calc(1rad * var(--angle))));
+}
+
+.point-actor[data-mode="1"]:after {
+	transform: translate(10px, calc(-50%)) rotate(calc(90deg - calc(1rad * var(--angle))));
+}
+
+.point-actor[data-mode="2"]:after {
+	transform: translate(10px, calc(-50%)) rotate(calc(180deg - calc(1rad * var(--angle))));
+}
+
+.point-actor[data-mode="3"]:after {
+	transform: translate(10px, calc(-50%)) rotate(calc(270deg - calc(1rad * var(--angle))));
+}
+
+
+*/
+
+.actor.ring {
+	width:64px;
+	height:64px;
+	background: url(/Sonic/rings.png);
+	-webkit-animation: ringSpin steps(7) 0.4s infinite;
+}
+
+@-webkit-keyframes ringSpin{
+	from{
+		background-position:0px 0px;
+	}
+	to{
+		background-position:-448px 0px;
+	}
+}
+
+.point-dump {
+	display: none;
+	display: inline-block;
+	position: absolute;
+	top:  calc(-0px + calc(1px * var(--y)));
+	left: calc(-0px + calc(1px * var(--x)));
+}
+
+.point-dump .point {
+	mix-blend-mode: difference;
+	z-index: 9001;
+	position: absolute;
+	top:  0px;
+	left: 0px;
+	background-color: var(--color, blue);
+	width:  2px;
+	height: 2px;
+	border-radius: 50%;
+}
+
+.point-dump .label {
+	z-index: 9000;
+	position: absolute;
+	bottom: 100%;
+	left:  100%;
+	font-weight: bold;
+	background-color: rgba(0,0,0,0.75);
+	color: white;
+	margin-left: 3px;
+	margin-bottom: -3px;
+	white-space: nowrap;
+	opacity: 0.5;
+}
+
+.point-dump .label:hover {
+	opacity: 1;
+}
+
+.line-dump {
+	z-index: 2000;
+	position: absolute;
+	top:  calc(-0px + calc(1px * var(--y)));
+	left: calc(-0px + calc(1px * var(--x)));
+}
+
+.line-dump .line {
+	transform: rotate( calc(1rad * var(--angle)) );
+	transform-origin: top left;
+	border-left: 2px solid red;
+	height: calc(1px * var(--length));
+}
+
+@font-face {
+    font-family: 'early_gameboy_regular';
+    src: url('/fonts/early-gameboy/early_gameboy-webfont.woff2') format('woff2'),
+         url('fonts/early-gameboy/early_gameboy-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+html, body {
+	font-family: verdana;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	margin: 0;
+
+}
+
+html {
+	background-image: url(/ui/pokemon-ruby.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: top right;
+}
+
+body {
+	justify-content: center;
+	align-items: center;
+}
+
+h1 {
+	font-family: early_gameboy_regular;
+	font-size: 2.5rem;
+	text-shadow:  2px 2px 20px rgba(255,255,255,0.5);
+}
+
+body > div {
+}
+
+.viewport {
+	image-rendering: pixelated;
+	width: calc(2px * var(--width));
+	height: calc(2px * var(--height));
+	border: 1px solid black;
+	position: relative;
+	overflow: hidden;
+	color: red;
+	font-size: 0.7rem;
+}
+
+.viewport-header {
+	flex-direction: row;
+	align-items: center;
+}
+
+.viewport,
+.viewport-header,
+.viewport-caption {
+	margin-bottom: 1em;
+}
+
+.viewport,
+.viewport-caption {
+	box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+}
+
+.viewport-header,
+.viewport-caption {
+	width: calc(2px * var(--width));
+	line-height: 1.25em;
+	display: flex;
+}
+
+.viewport-caption {
+	background-color: rgba(255,255,255,0.75);
+	padding: 0.5em;
+	flex-direction: column;
+}
+
+.viewport-caption > div {
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+}
+
+.viewport-caption > div,
+.viewport-caption > label {
+	padding: 0.5em;
+}
+
+.viewport-caption > div > div {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.viewport-zoom {
+	transform: scale(2);
+	transform-origin: top left;
+}
+
+.viewport-zoom,
+.viewport-background,
+.viewport-content {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	min-width: 100%;
+	min-height: 100%;
+}
+
+.viewport-content {
+	transform: translate(calc(1px * var(--x)), calc(1px * var(--y)));
+}
+
+.viewport-background {
+	transform: translate(calc(1px * var(--xMod)), calc(1px * var(--yMod)));
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.viewport-background > div {
+	box-shadow: inset 0 0 4px rgba(255,0,0,0.25);
+	/*border-bottom: 1px solid #CCC;
+	border-right: 1px solid #CCC;
+	box-sizing: border-box;*/
+}
+
+span.arrow-east,
+span.arrow-west {
+	background-image: url(/debug/arrow-east.svg);
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 1.5em;
+	height: 0.5em;
+	display: inline-block;
+}
+
+span.arrow-west {
+	transform: scaleX(-1);
+}
+
+span.button {
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 1em;
+	height: 1em;
+	display: inline-block;
+	margin-left: 0.25em;
+	margin-right: 0.25em;
+}
+
+span.button.ps-x {
+	background-image: url(/ui/playstation-button-x.svg);
+}
+span.button.ps-o {
+	background-image: url(/ui/playstation-button-circle.svg);
+}
+
+span.button.ps-l1 {
+	background-image: url(/ui/playstation-button-l1.svg);
+}
+
+span.button.ps-r1 {
+	background-image: url(/ui/playstation-button-r1.svg);
+}
+
+span.button.xb-a {
+	background-image: url(/ui/xbox-button-a.svg);
+}
+
+span.button.xb-b {
+	background-image: url(/ui/xbox-button-b.svg);
+}
+
+span.arrow-west {
+	transform: scaleX(-1);
+}
+
+.sean-icon {
+	background-image: url(/ui/masksean.png);
+	background-repeat: no-repeat;
+	background-position: 2px 3px;
+	background-size: cover;
+	border-radius: 50%;
+	margin-right: 1em;
+	width: 4.5em;
+	height: 4.5em;
+	display: inline-block;
+	box-shadow: 0 0.5em 1em rgba(0,0,0,0.5);
+	background-color: white;
+}
+
+
+/*# sourceMappingURL=app.css.map*/
