--- a/docs/app.css
+++ b/docs/app.css
@@ -254,10 +254,12 @@ html, body {
 	font-family: verdana;
 	height: 100%;
 	width: 100%;
-	display: flex;
-	flex-direction: column;
 	margin: 0;
 
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 html {
@@ -268,23 +270,32 @@ html {
 }
 
 body {
-	justify-content: center;
-	align-items: center;
+	overflow: hidden;
 }
 
 h1 {
 	font-family: early_gameboy_regular;
-	font-size: 2.5rem;
+	font-size: 2rem;
 	text-shadow:  2px 2px 20px rgba(255,255,255,0.5);
 }
 
 body > div {
 }
 
+.viewport-frame {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	--scale-transition: 0.3s ease-in;
+	--scale: 1;
+}
+
 .viewport {
 	image-rendering: pixelated;
-	width: calc(2px * var(--width));
-	height: calc(2px * var(--height));
+	width: calc(1px * calc(var(--width)  * var(--scale) ));
+	height: calc(1px * calc(var(--height)  * var(--scale) ));
+	transition: width var(--scale-transition), height var(--scale-transition);
 	border: 1px solid black;
 	position: relative;
 	overflow: hidden;
@@ -293,8 +304,13 @@ body > div {
 }
 
 .viewport-header {
+	position: sticky;
+	top: 0;
+	z-index: 1;
+	padding: 0.5em;
 	flex-direction: row;
 	align-items: center;
+	white-space: nowrap;
 }
 
 .viewport,
@@ -310,12 +326,20 @@ body > div {
 
 .viewport-header,
 .viewport-caption {
-	width: calc(2px * var(--width));
+	z-index: 2000;
+	box-sizing: border-box;
+	width: calc(1px * calc(var(--width)  * var(--scale) ));
+	min-width: 550px;
+	max-width: 100vw;
+	transition: width var(--scale-transition);
 	line-height: 1.25em;
 	display: flex;
 }
 
 .viewport-caption {
+	position: sticky;
+	bottom: 0;
+	font-size: smaller;
 	background-color: rgba(255,255,255,0.75);
 	padding: 0.5em;
 	flex-direction: column;
@@ -332,6 +356,10 @@ body > div {
 	padding: 0.5em;
 }
 
+.viewport-caption label {
+	padding: 0.25em;
+}
+
 .viewport-caption > div > div {
 	flex: 1;
 	display: flex;
@@ -340,7 +368,8 @@ body > div {
 }
 
 .viewport-zoom {
-	transform: scale(2);
+	transition: transform var(--scale-transition);
+	transform: scale(var(--scale));
 	transform-origin: top left;
 }
 
@@ -409,6 +438,8 @@ span.arrow-west {
 	width: 1.5em;
 	height: 0.5em;
 	display: inline-block;
+	margin-left: 0.25em;
+	margin-right: 0.25em;
 }
 
 span.arrow-west {
@@ -419,7 +450,7 @@ span.button {
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
-	width: 1em;
+	width: 1.5em;
 	height: 1em;
 	display: inline-block;
 	margin-left: 0.25em;
@@ -449,6 +480,10 @@ span.button.xb-b {
 	background-image: url(/ui/xbox-button-b.svg);
 }
 
+span.button.xb-rb {
+	background-image: url(/ui/xbox-button-rb.svg);
+}
+
 span.arrow-west {
 	transform: scaleX(-1);
 }
@@ -458,6 +493,7 @@ span.arrow-west {
 	background-repeat: no-repeat;
 	background-position: 2px 3px;
 	background-size: cover;
+	border: 3px solid black;
 	border-radius: 50%;
 	margin-right: 1em;
 	width: 4.5em;
@@ -465,6 +501,32 @@ span.arrow-west {
 	display: inline-block;
 	box-shadow: 0 0.5em 1em rgba(0,0,0,0.5);
 	background-color: white;
+}
+
+.right {
+	align-items: flex-end !important;;
+	text-align: right !important;
+}
+
+.viewport-caption i {
+	margin-bottom: 0.5em;
+}
+
+.focus-me {
+	position: absolute;
+	bottom: 0px;
+	font-size: 2em;
+	z-index: 1000;
+	background-color: white;
+	color: red;
+	opacity: 0.7;
+	pointer-events: none;
+	transition: opacity 0.25s ease-in;
+}
+
+.viewport:focus .focus-me {
+	transition: opacity 0.2s ease-out;
+	opacity: 0;
 }
 
 
