--- a/docs/app.css
+++ b/docs/app.css
@@ -279,9 +279,6 @@ h1 {
 	text-shadow:  2px 2px 20px rgba(255,255,255,0.5);
 }
 
-body > div {
-}
-
 .viewport-frame {
 	display: flex;
 	flex-direction: column;
@@ -395,16 +392,17 @@ body > div {
 }
 
 .viewport-background > div {
-	box-shadow: inset 0 0 4px rgba(255,0,0,0.25);
+	box-shadow: inset 0 0 4px rgba(255,0,0,0.4);
 	/*border-bottom: 1px solid #CCC;
 	border-right: 1px solid #CCC;
 	box-sizing: border-box;*/
 }
 
+
 .viewport .hud {
 	position: absolute;
-	top: 0;
-	right: 0;
+	top: 0.5em;
+	right: 0.5em;
 	padding: 1em;
 	background-color: rgba(0,0,0,0.5);
 }
@@ -510,6 +508,10 @@ span.arrow-west {
 
 .viewport-caption i {
 	margin-bottom: 0.5em;
+}
+
+.viewport-caption input[type="number"] {
+	max-width: 3em;
 }
 
 .focus-me {
