--- a/app/actor/point-actor.css
+++ b/app/actor/point-actor.css
@@ -1,4 +1,10 @@
 .point-actor {
+	position: absolute;
+	left: calc(1px * var(--x));
+	top: calc(1px * var(--y));
+}
+
+.point-actor.actor-generic {
 	background: red;
 	width: 1px;
 	height: 1px;
@@ -8,8 +14,16 @@
 	box-shadow: 0 0 4px 4px rgba(0,255,0,0.45);
 }
 
-/*.point-actor:after {
-	filter: invert(50%) sepia(100) saturate(200) hue-rotate(180deg);
+.point-actor.actor-generic[data-colliding=true] {
+	box-shadow: 0 0 4px 4px rgba(0,0,255,0.45);
+}
+
+.actor-generic {
+	z-index: 1;
+}
+
+.actor-generic:after {
+	filter: invert(25%) brightness(200%) sepia(100%) hue-rotate(100deg) saturate(200%);
 	display: block;
 	position: absolute;
 	content: ' ';
@@ -17,32 +31,107 @@
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: center;
-	width: 40px;
-	height: 40px;
-	font-size: 2.5rem;
+	width: 20px;
+	height: 20px;
 	z-index: 1000;
-	color: lime;
 	top: 0;
 	left: 0;
-	transform-origin: -10px 50%;
-	transform: translate(10px, calc(-50%)) rotate(calc(0deg - calc(1rad * var(--angle))));
+	--translate: translate(5px, calc(-50%));
+	transform-origin: -5px 50%;
+	transform: var(--translate) rotate(calc(0deg + calc(1rad * var(--debugVector))));
+	opacity: 0.75;
 }
 
-.point-actor[data-facing="left"]:after {
-	transform: translate(10px, calc(-50%)) rotate(calc(180deg - calc(1rad * var(--angle))));
+.actor-generic[data-falling="false"][data-mode="0"]:after {
+	transform: var(--translate) rotate(calc(0deg - calc(1rad * var(--debugVector))));
 }
 
-.point-actor[data-mode="1"]:after {
-	transform: translate(10px, calc(-50%)) rotate(calc(90deg - calc(1rad * var(--angle))));
-}
-
-.point-actor[data-mode="2"]:after {
-	transform: translate(10px, calc(-50%)) rotate(calc(180deg - calc(1rad * var(--angle))));
-}
-
-.point-actor[data-mode="3"]:after {
-	transform: translate(10px, calc(-50%)) rotate(calc(270deg - calc(1rad * var(--angle))));
+.actor-generic[data-falling="false"][data-mode="1"]:after {
+	transform: var(--translate) rotate(calc(90deg - calc(1rad * var(--debugVector))));
 }
 
 
-*/
+.actor-generic[data-falling="false"][data-mode="2"]:after {
+	transform: var(--translate) rotate(calc(180deg - calc(1rad * var(--debugVector))));
+}
+
+.actor-generic[data-falling="false"][data-mode="3"]:after {
+	transform: var(--translate) rotate(calc(270deg - calc(1rad * var(--debugVector))));
+}
+
+.actor-generic[data-falling="false"][data-mode="0"][data-facing="left"]:after {
+	transform: var(--translate) rotate(calc(180deg - calc(1rad * var(--debugVector))));
+}
+
+.actor-generic[data-falling="false"][data-mode="1"][data-facing="left"]:after {
+	transform: var(--translate) rotate(calc(270deg - calc(1rad * var(--debugVector))));
+}
+
+.actor-generic[data-falling="false"][data-mode="2"][data-facing="left"]:after {
+	transform: var(--translate) rotate(calc(0deg - calc(1rad * var(--debugVector))));
+}
+
+.actor-generic[data-falling="false"][data-mode="3"][data-facing="left"]:after {
+	transform: var(--translate) rotate(calc(90deg - calc(1rad * var(--debugVector))));
+}
+
+.actor-monitor:after {
+	--sprite-offset-x: -18px;
+	--sprite-offset-y: -13px;
+	content: ' ';
+	font-size: 0.25rem;
+	color: black;
+	text-align: center;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: calc(1px * var(--height));
+	width: calc(1px * var(--width));
+	transform: translate(-50%, calc(-100% + 1px));
+	box-shadow: none;
+	background-image: url(/Sonic/ringMonitor.png);
+	background-repeat: no-repeat;
+	background-position: -18px -13px;
+	animation: monitor-flicker steps(4) infinite;
+	animation-duration: calc(1ms * 480);
+}
+
+.actor-monitor:before {
+	--collColor: rgba(0,255,255,0.25);
+	box-sizing: border-box;
+	content: ' ';
+	transform: translate(-50%, calc(-100% + 1px));
+	position: absolute;
+	top: 1px;
+	left: 0px;
+	height: calc(1px + calc(1px * var(--height)));
+	width: calc(2px + calc(1px * var(--width)));
+	z-index: 10000;
+}
+
+.actor-monitor[data-colliding="true"]:before {
+	--collColor: rgba(255,0,0,0.25);
+}
+
+.actor-monitor.collision-top:before {
+	border-top: 4px solid var(--collColor);
+	top: 0px;
+}
+.actor-monitor.collision-left:before {
+	border-left: 4px solid var(--collColor);
+}
+.actor-monitor.collision-bottom:before {
+	border-bottom: 4px solid var(--collColor);
+}
+.actor-monitor.collision-right:before {
+	border-right: 4px solid var(--collColor);
+}
+
+@-webkit-keyframes monitor-flicker{
+	from{
+		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
+	}
+	to{
+		background-position: calc(-256px + var(--sprite-offset-x)) var(--sprite-offset-y);
+	}
+}
